--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 @if(contentLoading){
 <app-loading-spinner [@routeFadeAnimation]></app-loading-spinner>
 }@else{
-<router-outlet></router-outlet>
+<router-outlet [@routeFadeAnimation]></router-outlet>
 <p-toast position="bottom-right"/>
 }
