--- a/src/app/components/base-components/base-label-component/base-label-component.component.html
+++ b/src/app/components/base-components/base-label-component/base-label-component.component.html
@@ -3,7 +3,7 @@
     @if(required){
     <span class="required_input text-danger font_size__16 ms-1"> * </span>
     }
-    @if(isPopover){
+    <!-- @if(isPopover){
         <app-base-tooltip-component classes="ms-1" [popoverContent]="popoverContent" [popoverType]="popoverType"></app-base-tooltip-component>
-    } 
+    }  -->
 </label>
