--- a/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
+++ b/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
@@ -1,12 +1,12 @@
-<div class="rounded-4 p-3" [style.background-color]="background()">
+<div class="rounded-4 p-3" [class]="classes()" [style.background-color]="background()">
     <div class="d-flex">
         <aside class="flex-fill">
-            <p class="text-white my-4 font_size__13 pe-3"> {{title() | translate}} </p>
+            <p class="my-4 font_size__13 pe-3"> {{title() | translate}} </p>
         </aside>
         <aside class="text-center">
-            <p-avatar icon="pi pi-chart-bar" styleClass="mr-2" size="large"
-                [style]="{ 'background-color':' var(--surface-0)', color: 'var(--orange-600)' }" shape="circle" />
-            <p class="h5 text-white mt-3"> {{value()}} </p>
+            <p-avatar icon="pi pi-{{icon()}}" styleClass="mr-2" size="large"
+                [style]="{ 'background-color':iconBg(), color: iconColor() }" shape="circle" />
+            <p class="h6 mt-3"> {{value()}} </p>
         </aside>
     </div>
 </div>
