--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,12 +1,16 @@
 <div class="main_layout bg-body-secondary">
-    <div class="d-flex">
-        <aside class="col-lg-2">
-            <app-dashboard-sidebar></app-dashboard-sidebar>
-        </aside>
-        <aside class="col-lg-10">
-            <div class="pt-5 px-4" [@slideInOutAnimation]="getRouteAnimationData()">  
-                <router-outlet></router-outlet>
-            </div>
-        </aside>
+    <div class="px-lg-0 px-4">
+        <div class="row g-0">
+            <aside class="col-lg-2">
+                <app-dashboard-sidebar></app-dashboard-sidebar>
+            </aside>
+            <aside class="col-lg-10">
+                <div class="py-5 col-md-9 mx-auto">
+                    <div [@slideInOutAnimation]="getRouteAnimationData()">
+                        <router-outlet></router-outlet>
+                    </div>
+                </div>
+            </aside>
+        </div>
     </div>
 </div>
