--- a/src/app/views/statistics/statistics.component.html
+++ b/src/app/views/statistics/statistics.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-9 mx-auto">
+<div>
     <div class="row">
         <aside class="col-md-4 my-3">
             <app-statistic-card title="totalDocs" [value]="200" background="var(--blue-300)"></app-statistic-card>
