--- a/src/app/components/base-components/base-link-component/base-link-component.component.html
+++ b/src/app/components/base-components/base-link-component/base-link-component.component.html
@@ -1,10 +1,10 @@
 @if(external){
-    <a target="_blank" [href]="sanitizer.bypassSecurityTrustUrl(path)" [download]="download" class="btn" [class]="classes"  rel="noopener noreferrer">
+    <a target="_blank" [href]="sanitizer.bypassSecurityTrustUrl(path)" [download]="download" class="btn d-flex" [class]="classes"  rel="noopener noreferrer">
         <ng-container *ngTemplateOutlet="content"></ng-container>
     </a>
 }
 @else {
-    <a [routerLink]="[path]" [routerLinkActive]="activeClasses" class="btn" [class]="classes">
+    <a [routerLink]="[path]" [queryParams]="queryParams" [routerLinkActive]="activeClasses" class="btn d-flex" [class]="classes">
         <ng-container *ngTemplateOutlet="content"></ng-container>
     </a>
 }
