--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,7 @@
-<div class="auth_layout bg-body-secondary vh-100 py-5">
-    <div class="p-4 col-md-4 mx-auto bg-white shadow-sm" [@slideInOutAnimation]="getRouteAnimationData()">
-        <router-outlet></router-outlet>
-    </div>
+<div class="auth_layout bg-body-secondary vh-100 py-3">
+    <section class="container h-100 d-flex align-items-center">
+        <div class="p-4 col-md-4 mx-auto bg-white shadow-sm" [@slideInOutAnimation]="getRouteAnimationData()">
+            <router-outlet></router-outlet>
+        </div>
+    </section>
 </div>
