--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,11 +1,11 @@
 <div class="main_layout bg-body-secondary">
     <div class="px-lg-0 px-4">
-        <div class="row g-0">
+        <div class="row align-items-stretch g-0">
             <aside class="col-lg-2">
                 <app-dashboard-sidebar></app-dashboard-sidebar>
             </aside>
-            <aside class="col-lg-10">
-                <div class="py-5 col-md-9 mx-auto">
+            <aside class="col-lg-10 d-flex flex-column justify-content-center align-items-center">
+                <div class="py-5 col-md-11 mx-auto">
                     <div [@slideInOutAnimation]="getRouteAnimationData()">
                         <router-outlet></router-outlet>
                     </div>
