--- a/src/app/views/promo-codes/promo-codes.component.html
+++ b/src/app/views/promo-codes/promo-codes.component.html
@@ -2,7 +2,8 @@
     [rows]="rows()" 
     [columns]="columns"
     [isActions]="true"
-    [actions]="actions">
+    [actions]="actions"
+    (editClicked)="showDialog.set(true)">
     <ng-container ngProjectAs="buttons">
         <app-base-button-component classes="btn btn-primary me-1 btn-sm font_size__12 px-3 py-2 rounded-3" icon="plus-circle"> {{ 'addCoupon' | translate }}</app-base-button-component>
     </ng-container>
@@ -13,3 +14,7 @@
         <td> {{item.id}} </td>
     </ng-template>
 </app-show-table>
+
+<app-dialog-component [(visible)]="showDialog">
+    <app-promo-code-form></app-promo-code-form>
+</app-dialog-component>
