--- a/src/app/components/base-components/base-button-component/base-button-component.component.html
+++ b/src/app/components/base-components/base-button-component/base-button-component.component.html
@@ -1,7 +1,7 @@
 <button (click)="buttonClicked()" class="btn" [class]="classes() + ( icon() ? ' d-flex' : '')"  [disabled]="disabled() || loading()">
     @if(loading()){<i class="pi pi-spin pi-spinner"></i>}
     @else{
-        @if(icon()){<i class="pi pi-{{icon()}} mx-1"></i>}
+        @if(icon()){<i class="pi pi-{{icon()}} me-3"></i>}
         <ng-content></ng-content>
     }
 </button>
