--- a/src/app/components/layout-components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/components/layout-components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -4,5 +4,6 @@
         @for(item of links; track item){
             <li> <app-base-link-component classes="d-block p-3 font_size__13 text-start" activeClasses="btn-secondary" [path]="item.path" [icon]="item.icon">  {{item.title | translate}}</app-base-link-component> </li>
         }
+        <li> <app-base-button-component (clicked)="authStoreService.logout()" classes="d-block p-3 font_size__13 text-start" icon="sign-out"> {{'logout' | translate}} </app-base-button-component> </li>
     </ul>
 </div>
