--- a/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
+++ b/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
@@ -3,7 +3,7 @@
         <aside class="flex-fill">
             <p class="my-4 font_size__13 pe-3"> {{title() | translate}} </p>
         </aside>
-        <aside class="text-center">
+        <aside class="text-end">
             <p-avatar icon="pi pi-{{icon()}}" styleClass="mr-2" size="large"
                 [style]="{ 'background-color':iconBg(), color: iconColor() }" shape="circle" />
             <p class="h6 mt-3"> {{value()}} </p>
