--- a/src/app/views/auth/reset-password/reset-password.component.html
+++ b/src/app/views/auth/reset-password/reset-password.component.html
@@ -7,7 +7,7 @@
         <app-base-label-component for="otpInput" classes="form-label" [required]="true"> {{'code' | translate}}
         </app-base-label-component>
         <div class="text-center" dir="ltr">
-            <p-inputOtp [formControl]="code" [integerOnly]="true" />
+            <p-inputOtp [length]="6" [formControl]="code" [integerOnly]="true" />
         </div>
         @if(code.invalid && code.touched){
         <app-input-validation-alert-component> {{'errors.required' | translate}} </app-input-validation-alert-component>
