--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -1,30 +1,29 @@
 <app-show-table 
-    [rows]="rows()" 
-    [columns]="columns"
-    [isActions]="true"
-    [actions]="actions"
-    (editClicked)="showDialog.set(true)"
-    (viewClicked)="showDialog.set(true)">
-    <ng-container ngProjectAs="filters">
-        <p-dropdown 
-        styleClass="me-2"
-        [options]="[1,2]" 
-        placeholder="{{'filter' | translate}}"
-        [showClear]="true">
-        <ng-template pTemplate="dropdownicon">
-            <i class="pi pi-filter"></i>
-        </ng-template>
-    </p-dropdown>
-    </ng-container>
+[rows]="rows()" 
+[isLoading]="isLoading()" 
+[columns]="columns" 
+[isActions]="true" 
+[actions]="actions"
+[totalRecords]="totalRecords()" 
+[isExporting]="isExporting()"
+[showImport]="false" 
+route="/{{ERoutes.client}}"
+[(filter)]="filter"
+(onDelete)="deleteItem($event)" 
+(filterChange)="getClients()" 
+(onExport)="exportClients()">
+    <!-- <ng-container ngProjectAs="filters">
+        <p-dropdown styleClass="me-2" [options]="[1,2]" placeholder="{{'filter' | translate}}" [showClear]="true">
+            <ng-template pTemplate="dropdownicon">
+                <i class="pi pi-filter"></i>
+            </ng-template>
+        </p-dropdown>
+    </ng-container> -->
     <ng-template #itemsTemplate let-item="item">
         <td> {{item.id}} </td>
-        <td> {{item.id}} </td>
-        <td> {{item.id}} </td>
-        <td> {{item.id}} </td>
-        <td> {{item.id}} </td>
+        <td> {{item.fullName}} </td>
+        <td> {{item.email}} </td>
+        <td> {{item.phoneNumber}} </td>
+        <td> {{item.nationalId}} </td>
     </ng-template>
 </app-show-table>
-
-<app-dialog-component [(visible)]="showDialog">
-    <app-client-data></app-client-data>
-</app-dialog-component>
