--- a/src/app/components/layout-components/show-table/show-table.component.html
+++ b/src/app/components/layout-components/show-table/show-table.component.html
@@ -17,7 +17,7 @@
 
     <div class="search_text my-3">
         <p-inputGroup styleClass="bg-body-secondary">
-            <input (keydown.enter)="onSearch()" [(ngModel)]="searchText" type="text" class="form-control" pInputText placeholder="{{'search' | translate}}" />
+            <input (keyup.backspace)="!searchText && onSearch()" (keydown.enter)="onSearch()" [(ngModel)]="searchText" type="text" class="form-control" pInputText placeholder="{{'search' | translate}}" />
             <button (click)="onSearch()" [disabled]="!totalRecords()" type="button" pButton icon="pi pi-search" [text]="true" severity="secondary" class="bg-transparent"></button>
         </p-inputGroup>
     </div>
@@ -26,7 +26,7 @@
     [loading]="isLoading()" 
     [columns]="columns()" 
     [value]="rows()" 
-    [tableStyle]="{ 'min-width': '50rem' }">
+    [tableStyle]="{ 'min-width': '60rem' }">
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th>#</th>
@@ -35,7 +35,7 @@
                     {{ col | translate}}
                 </th>
                 }
-                @if(isActions()){<th class="fw-normal"> {{'action' | translate}} </th>}
+                @if(actions().length){<th class="fw-normal"> {{'action' | translate}} </th>}
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-item let-rowIndex="rowIndex">
