--- a/src/app/components/base-components/base-badge-component/base-badge-component.component.html
+++ b/src/app/components/base-components/base-badge-component/base-badge-component.component.html
@@ -1,1 +1,1 @@
-<span class="px-3 py-1 rounded-pill font_size__11" [style.color]="color()" [style.backgroundColor]="background()"> مفتوحة </span>
+<span class="px-3 py-1 rounded-pill font_size__11" [style.color]="color()" [style.backgroundColor]="background()"> <ng-content></ng-content> </span>
