--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -5,7 +5,7 @@
                 <app-dashboard-sidebar></app-dashboard-sidebar>
             </aside>
             <aside class="col-lg-10 d-flex flex-column justify-content-center align-items-center">
-                <div class="py-5 col-md-11 mx-auto">
+                <div class="py-5 col-md-11 col-12 mx-auto">
                     <div [@slideInOutAnimation]="getRouteAnimationData()">
                         <router-outlet></router-outlet>
                     </div>
