new / en localization

--- a/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
+++ b/src/app/components/views-components/statistics/statistic-card/statistic-card.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-4 p-3" [class]="classes()" [style.background-color]="background()">
+<div class="rounded-4 p-3 h-100" [class]="classes()" [style.background-color]="background()">
     <div class="d-flex">
         <aside class="flex-fill">
             <p class="my-4 font_size__13 pe-3"> {{title() | translate}} </p>
