--- a/src/app/views/users/users.component.html
+++ b/src/app/views/users/users.component.html
@@ -13,7 +13,7 @@
     (onExport)="exportUsers()"
     >
     <ng-container ngProjectAs="buttons">
-        <app-base-link-component path="/{{ERoutes.user}}" classes="btn btn-primary me-1 btn-sm font_size__12 px-3 py-2 rounded-3" icon="plus-circle"> إضافة مستخدم </app-base-link-component>
+        <app-base-link-component path="/{{ERoutes.user}}" classes="btn btn-primary me-1 btn-sm font_size__12 px-3 py-2 rounded-3" icon="plus-circle">  {{'addUser' | translate}} </app-base-link-component>
     </ng-container>
     <ng-template #itemsTemplate let-item="item">
         <td> {{item.id}} </td>
