--- a/src/app/components/layout-components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/components/layout-components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -1,6 +1,7 @@
 <div class="position-sticky top-0 min-vh-100 bg-white p-3">
     <div class="text-center"><app-base-logo-component></app-base-logo-component></div>
     <ul class="list-unstyled m-0 p-0 mt-4">
+        <li> <app-base-button-component (clicked)="switchLang()" classes="p-3 font_size__13 text-start align-items-center" icon="globe"> {{'lang' | translate}} </app-base-button-component> </li>
         @for(item of links; track item){
             <li> <app-base-link-component classes=" p-3 font_size__13 text-start align-items-center" activeClasses="btn-secondary" [path]="item.path" [icon]="item.icon">  {{item.title | translate}}</app-base-link-component> </li>
         }
